# fastapi-react-template

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/rules/: openspec-tasks-mandatory-steps.md
backend/: .example.env  pyproject.toml  requirements.in
backend/alembic/versions/: 0001_initial.py  0002_user_lockout.py
backend/app/: main.py
backend/app/core/: settings.py
backend/app/features/auth/: router.py  service.py
backend/app/features/roles/: router.py  service.py
backend/app/features/users/: models.py  schemas.py  service.py
backend/app/web/: __init__.py  spa.py
backend/tests/: test_api.py
caddy/: Caddyfile
docs/: backend-standards.md  base-standards.md  data-model.md  development_guide.md  frontend-standards.md  verification-guide.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/app/: main.tsx  providers.tsx  router.tsx  styles.css  theme.css
frontend/src/features/app-shell/: AppShell.tsx  Sidebar.tsx  navigation.ts
frontend/src/features/auth/: AuthProvider.tsx  LoginPage.css  LoginPage.test.tsx  LoginPage.tsx  ProtectedRoute.tsx  RoleRoute.tsx  api.ts  types.ts
frontend/src/features/home/: HomePage.css  HomePage.tsx  dashboard.ts
frontend/src/features/profile/: ProfilePage.tsx
frontend/src/features/sessions/: SessionsPage.tsx
frontend/src/features/users/: UserDialog.tsx  UsersPage.tsx  api.ts  types.ts
frontend/src/shared/api/: http.ts
openspec/: config.yaml
(+8 files in other folders)
